handson/manifest/base/networking/peerauth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: handson
spec:
  mtls:
    mode: PERMISSIVE
