handson/manifest/base/networking/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: handson
  namespace: handson
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 18080
      name: http-app
      protocol: HTTP
    hosts:
    - "csm.handson.com"
