handson/manifest/base/networking/simple-routing.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-routing
  namespace: handson
  labels:
    content: simple-routing
spec:
  hosts:
  - "csm.handson.com"
  gateways:
  - handson-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: handson-svc
        port:
          number: 8080
